--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -12,12 +12,12 @@ jobs:
 - job: Build
   strategy:
     matrix:
-      mac_36:
-        imageName: 'macOS-10.14'
-        python.version: '3.6'
-      mac_37:
-        imageName: 'macOS-10.14'
-        python.version: '3.7'
+      #mac_36:
+      #imageName: 'macOS-10.14'
+      #   python.version: '3.6'
+      #mac_37:
+      #   imageName: 'macOS-10.14'
+      #   python.version: '3.7'
       #linux_py35:
       #  imageName: 'ubuntu-16.04'
       #  python.version: '3.5'
